Computer is putting down correct matching dominos. Only problem is that the whole list keeps getting swapped.